--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thundernetworkrad/std",
-  "version": "2023.01.24-4",
+  "version": "2023.01.25",
   "description": "Standard module for javascript",
   "main": "index.js",
   "scripts": {
