--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@thundernetworkrad/std",
-  "version": "2023.01.25",
+  "version": "2023.01.26",
   "description": "Standard module for javascript",
-  "main": "index.js",
+  "main": "build/index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "install": "tsc"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,10 @@
   },
   "homepage": "https://github.com/FIUSDevelopment/std#readme",
   "dependencies": {
-    "@thundernetworkrad/readline-sync": "^2023.1.10"
+    "@thundernetworkrad/readline-sync": "^2023.1.26-2"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.18",
+    "typescript": "^4.9.4"
   }
 }
