--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -4,7 +4,7 @@ on:
     types: [created]
 jobs:
   Publish-NPM:
-    runs-on: ubuntu-latest
+    runs-on: node1
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -14,6 +14,10 @@ jobs:
           node-version: '16.x'
           registry-url: 'https://registry.npmjs.org'
           scope: '@thundernetworkrad'
+      - name: Install Dependencies
+        run: npm i
+      - name: Build
+        run: npm run build
       - name: Publish package on NPM 📦
         run: npm publish --access public
         env:
@@ -22,7 +26,7 @@ jobs:
           REGISTRY2: 'registry=https://registry.npmjs.org/'
 
   Publish-GitHub-NPM:
-    runs-on: ubuntu-latest
+    runs-on: node1
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -32,6 +36,10 @@ jobs:
           node-version: '16.x'
           registry-url: 'https://npm.pkg.github.com'
           scope: '@thundernetworkrad'
+      - name: Install Dependencies
+        run: npm i
+      - name: Build
+        run: npm run build
       - name: Publish package on NPM 📦
         run: npm publish --access public
         env:
