--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@thundernetworkrad/std",
-  "version": "2023.01.29",
+  "version": "2023.02.05",
   "description": "Standard module for JavaScript / TypeScript",
   "main": "build/index.js",
-  "types": "dist/index.d.ts",
+  "types": "build/index.d.ts",
   "scripts": {
-    "install": "tsc"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -26,8 +26,12 @@
   },
   "homepage": "https://github.com/ThunderNetworkRaD/std#readme",
   "dependencies": {
+    "@thundernetworkrad/logs": "^2023.2.5-1",
     "@thundernetworkrad/readline-sync": "^2023.1.26-2",
+    "@thundernetworkrad/time": "^2023.2.5-2",
     "@types/node": "^18.11.18",
+    "node-cin": "^2023.2.5",
+    "node-cout": "^2023.2.5-1",
     "tslib": "^2.5.0",
     "typescript": "^4.9.4"
   }
